feat: alternatives services, tests and routes
