# backend/src/modules/alternatives/dtos/ICreateAlternativesRequestDTO.ts
@@ -1,0 +1,7 @@
+export default interface ICreateAlternativesRequestDTO {
+  question_id: string;
+  alternatives: {
+    letter: string;
+    description: string;
+  }[];
+}
