# backend/src/modules/alternatives/dtos/ICreateOrUpdateAlternativeDTO.ts
@@ -1,0 +1,5 @@
+export default interface ICreateOrUpdateAlternativeDTO {
+  question_id: string;
+  letter: string;
+  description: string;
+}
