# backend/src/modules/alternatives/infra/typeorm/entities/Alternative.ts
@@ -1,0 +1,61 @@
+import {
+  Entity,
+  Column,
+  CreateDateColumn,
+  UpdateDateColumn,
+  PrimaryColumn,
+  ManyToOne,
+  JoinColumn,
+} from 'typeorm';
+
+import uploadConfig from '@config/upload';
+
+import { Exclude, Expose } from 'class-transformer';
+import Question from '@modules/questions/infra/typeorm/entities/Question';
+
+@Entity('alternatives')
+class Alternative {
+  @PrimaryColumn()
+  id: string;
+
+  @Column()
+  question_id: string;
+
+  @ManyToOne(() => Question)
+  @JoinColumn({ name: 'question_id' })
+  question: Question;
+
+  @Column()
+  letter: string;
+
+  @Column()
+  description: string;
+
+  @Column()
+  @Exclude()
+  image: string;
+
+  @CreateDateColumn()
+  created_at: Date;
+
+  @UpdateDateColumn()
+  updated_at: Date;
+
+  @Expose({ name: 'image_url' })
+  getImageUrl(): string | null {
+    if (!this.image) {
+      return null;
+    }
+
+    switch (uploadConfig.driver) {
+      case 'disk':
+        return `${process.env.APP_API_URL}/files/${this.image}`;
+      case 's3':
+        return `https://${uploadConfig.config.aws.bucket}.s3.us-east-2.amazonaws.com/${this.image}`;
+      default:
+        return null;
+    }
+  }
+}
+
+export default Alternative;
